# FinalReview-Skill

./: .gitignore  AGENT.md  LICENSE  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
configs/: default.yaml
docs/: architecture.md  roadmap.md
examples/course_materials/: 作业题.md  课堂录音转写.txt
references/: extraction-rules.md  output-spec.md
src/finalreview/: __init__.py  cli.py  config.py  models.py
src/finalreview/extraction/: __init__.py  completeness.py  exam_points.py  exercises.py  formulas.py  teacher_emphasis.py
src/finalreview/generation/: anki_exporter.py  knowledge_graph.py  markdown_writer.py  mock_exam.py  study_plan.py  wrong_book.py
src/finalreview/llm/: ollama_client.py  openai_client.py  rule_based.py
src/finalreview/parsers/: __init__.py  base.py  docx_parser.py  image_parser.py  pdf_parser.py  pptx_parser.py  table_parser.py  text_parser.py
src/finalreview/processing/: chunker.py  cleaner.py  deduplicator.py  source_tracker.py
src/finalreview/prompts/: extract_exam_points.md  extract_exercises.md  extract_formulas.md  generate_mock_exam.md  generate_study_guide.md  rag_answer.md
src/finalreview/rag/: __init__.py  embeddings.py  qa.py  retriever.py  vector_store.py
src/finalreview/ui/: streamlit_app.py
src/finalreview/utils/: file_utils.py  logging_utils.py  text_utils.py
tests/: test_chunker.py  test_exercise_extraction.py  test_formula_extraction.py  test_markdown_generation.py  test_source_refs.py
